src/test/deca/context/valid/mul_int_mul_int_mul_int_context.deca
// Description : 
// 
//      Test contextuellement correct de la multiplication  d'un int avec la multiplication  d'un int avec la multiplication  d'un int.
// 
// Résultats : 
// 
//      N/A 
// 
// Historique : 
// 
//      Créé le 07/06/2023 par le gl03

{
    int y =3*2*5;
}