src/test/deca/context/invalid/eq_string_eq_float.deca
// Description :
// 
//      Test syntaxiquement correct de "Bonjour"==2.5
// 
// Résultats : 
// 
//      N/A
// 
// Historique : 
// 
//      Créé le 09/06/2023 par gl03

{
    boolean y = "Bonjour"==2.5;
}

